force-app/main/default/objects/Price__c/Price__c.object-meta.xml
<CustomObject>
    <label>Price</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>