force-app/main/default/objects/Price__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact Name</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices</relationshipName>
    <type>Lookup</type>
</CustomField>