force-app/main/default/objects/Price__c/fields/ContractId__c.field-meta.xml
<CustomField>
    <fullName>ContractId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Supplier Agreement</description>
    <label>Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>UnitPrice</relationshipLabel>
    <relationshipName>PriceqObe</relationshipName>
    <type>Lookup</type>
</CustomField>