force-app/main/default/objects/Price__c/fields/EffectiveEndDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveEndDate__c</fullName>
    <description>Effective End Date</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>