force-app/main/default/objects/Price__c/fields/EffectiveStartDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveStartDate__c</fullName>
    <description>Effective Start Date</description>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>