force-app/main/default/objects/Price__c/fields/IsDirectOrder__c.field-meta.xml
<CustomField>
    <fullName>IsDirectOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Direct order availability</description>
    <label>Is Direct Order</label>
    <type>Checkbox</type>
</CustomField>