force-app/main/default/objects/Price__c/fields/PriceType__c.field-meta.xml
<CustomField>
    <fullName>PriceType__c</fullName>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UnitPrice</fullName>
            </value>
            <value>
                <fullName>SellingPrice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>