force-app/main/default/objects/Price__c/fields/ProductId__c.field-meta.xml
<CustomField>
    <fullName>ProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product Id</description>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Prices</relationshipLabel>
    <relationshipName>Prices1</relationshipName>
    <type>Lookup</type>
</CustomField>