force-app/main/default/objects/Price__c/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <description>Supplier Id</description>
    <formula>ContactId__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier</label>
    <type>Text</type>
</CustomField>