force-app/main/default/objects/Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>SupplierId__c</columns>
    <columns>PriceType__c</columns>
    <columns>Currency__c</columns>
    <columns>ProductId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>